<resources>
    <string name="app_name">Inventory Tool</string>
    <string name="menu_add">add</string>
    <string name="editor_activity_label_add_new">Add new item</string>
    <string name="editor_activity_label_edit">Edit item</string>
    <string name="product_name">Product Name</string>
    <string name="quantity">Quantity</string>
    <string name="price">price</string>
    <string name="supplier_information">SUPPLIER INFORMATION</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="supplier_phone_number">Supplier phone number</string>
    <string name="product_information">PRODUCT INFORMATION</string>
    <string name="accept">accept</string>

    <string name="inventory_empty_title">Your inventory seems empty</string>
    <string name="inventory_empty_subtitle">Start by adding some items</string>
    <string name="editor_failed">Something went wrong.   Please try again</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current pet [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>
    <string name="delete_all">Delete all</string>
    <string name="settings">Settings</string>

    <!-- Toast message in editor when current pet was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_item_successful">item deleted</string>

    <!-- Toast message in editor when current pet has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_item_failed">Error with deleting item</string>

    <!-- Dialog message to ask the user to confirm deleting the current pet [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this item?</string>

    <!-- Dialog button text for the option to confirm deleting the current pet [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current pet [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>
    <string name="editor_success">Product updated</string>
    <string name="set_price">Set price</string>
    <string name="product_added">New product added</string>
    <string name="delete_all_items_failed">Error deleting items</string>
    <string name="delete_all_item_successful">All items deleted</string>
    <string name="delete_all_dialog_msg">Delete all items?</string>
    <string name="sold">sold</string>
    <string name="contact_supplier">Contact supplier</string>
    <string name="plus1">+1</string>
    <string name="minus1">-1</string>
</resources>
