<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/standard_padding"
    tools:context="com.apps.palka.matt.inventorytool.EditorActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/product_information"
        android:textAppearance="?android:textAppearanceLarge" />

    <EditText
        android:id="@+id/product_name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/product_name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textAllCaps="true" />

        <EditText
            android:id="@+id/product_price_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/quick_quantity_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/subtract_quantity_button"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:text="@string/minus1" />

            <ImageView
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:padding="6dp"
                android:src="@drawable/ic_shopping_cart_36dp" />

            <Button
                android:id="@+id/add_quantity_button"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:text="@string/plus1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quantity"
                android:textAllCaps="true" />

            <EditText
                android:id="@+id/product_quantity_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/supplier_information"
        android:textAppearance="?android:textAppearanceLarge" />

    <EditText
        android:id="@+id/supplier_name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/supplier_name" />

    <EditText
        android:id="@+id/supplier_phone_number_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/supplier_phone_number"
        android:inputType="phone" />

    <TextView
        android:id="@+id/contact_supplier_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:background="?android:selectableItemBackground"
        android:drawablePadding="8dp"
        android:drawableStart="@drawable/ic_phone_44dp"
        android:gravity="center"
        android:text="@string/contact_supplier"
        android:textAllCaps="true"
        android:textColor="@color/colorAccent"
        android:textStyle="bold" />

</LinearLayout>
